apps/finance-app/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: finance-app
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=false
